# PlantBrainGrid

./: .gitignore  ARCHITECTURE.md  CLAUDE.md  CMakeLists.txt  IMPLEMENTATION_PLAN.md  README.md  pyproject.toml  run_sim.sh  setup.py  setup.sh  simulation_description_pt1.md
examples/: fire_starter.asm  reproducer.asm  root_farmer.asm  simple_leaf_grower.asm  single_reproducer.py
src/bindings/: module.cpp
src/core/: brain.cpp  brain.hpp  brain_ops.hpp  config.hpp  perlin.cpp  perlin.hpp  plant.cpp  plant.hpp  plant_cell.cpp  plant_cell.hpp  reproduction.cpp  reproduction.hpp  resources.cpp  resources.hpp  simulation.cpp  simulation.hpp  types.cpp  types.hpp  world.cpp  world.hpp
src/python/plantbraingrid/: __init__.py  __main__.py  brain_viewer.py  main.py  visualization.py
tests/cpp/: test_auto_spawn.cpp  test_brain.cpp  test_parallel.cpp  test_perlin.cpp  test_plant.cpp  test_reproduction.cpp  test_resources.cpp  test_serialization.cpp  test_simulation.cpp  test_world.cpp
tests/python/: conftest.py  test_bindings.py  test_determinism.py  test_integration.py
tools/: brain_assembler.py  genome_analyzer.py  plot_genome_heatmap.py  plot_species_map.py  run_logged.py
